# binary-tools

./: .gitignore  Cargo.toml  README.md
examples/: CMakeLists.txt  hello_world.c  hello_world_disassembly.txt
html/: Cargo.toml
html/html_element_derive/: Cargo.toml
html/html_element_derive/src/: lib.rs
html/src/: lib.rs  tests.rs
src/: lib.rs  main.rs  string_utils.rs
src/binary_utils/parser/: symbol_table.rs
src/binary_utils/parser/symbol_table/: tests.rs
src/html_utils/: mod.rs  tests.rs
tests/: string_utils_tests.rs  symbol_table.txt  symbol_table_tests.rs
