[package]
name = "binary-tools"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="~2.33.0"}
nom="7.0.0"
atty="*"

[[bin]]
name = "binary-tools"
path = "src/main.rs"

[lib]
name = "binarytools"
path = "src/lib.rs"